--- a/gosenor-order-service/pom.xml
+++ b/gosenor-order-service/pom.xml
@@ -11,6 +11,12 @@
 
     <groupId>com.gosenor</groupId>
     <artifactId>gosenor-order-service</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.gosenor</groupId>
+            <artifactId>gosenor-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
