优惠卷锁定

--- a/gosenor-user-service/src/main/resources/application.yml
+++ b/gosenor-user-service/src/main/resources/application.yml
@@ -34,10 +34,13 @@ mybatis-plus:
 logging:
   level:
     root: INFO
-seata:
-  tx-service-group: ${spring.application.name}-group
-  service:
-    grouplist:
-      gosenor-healthy: 127.0.0.1:8091
-    vgroup-mapping:
-      healthy-user-service-group: gosenor-healthy
+#seata:
+  #tx-service-group: ${spring.application.name}-group
+  #service:
+    #grouplist:
+      #gosenor-healthy: 127.0.0.1:8091
+    #vgroup-mapping:
+      #healthy-user-service-group: gosenor-healthy
+feign:
+  httpclient:
+    connection-timeout: 30000
