--- a/gosenor-common/pom.xml
+++ b/gosenor-common/pom.xml
@@ -43,10 +43,20 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--swagger ui接口文档依赖-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
+
+
+        <!--单元测试-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <!--redis客户端-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
